--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "packageManager": "^pnpm@7.17.1",
   "scripts": {
-    "build": "rollup -c build/rollup.js",
+    "build": "rollup -c build/rollup.mjs",
     "dev": "rollup -c build/rollup.js -w --environment TARGET:dev",
     "dev:css": "rollup -c build/rollup.js -w --environment TARGET:css",
     "dev:esm": "rollup -c build/rollup.js -w --environment TARGET:esm",
@@ -25,15 +25,15 @@
   "license": "MIT",
   "homepage": "http://tabulator.info/",
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^11.0.1",
-    "fs-extra": "^9.0.1",
-    "globby": "^11.0.2",
-    "node-sass": "^7.0.3",
-    "postcss": "^8.2.4",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.1.0",
+    "fs-extra": "^9.1.0",
+    "globby": "^11.1.0",
+    "postcss": "^8.4.19",
     "postcss-prettify": "^0.3.4",
-    "rollup": "^2.36.1",
-    "rollup-plugin-license": "^2.2.0",
-    "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup": "^3.5.0",
+    "rollup-plugin-license": "^3.0.1",
+    "rollup-plugin-postcss": "^4.0.2",
+    "sass": "^1.56.1"
   }
 }
